tests/test_bool/bad/test_xor_with_int.catala_en
## 'xor' should be a boolean operator

```catala
declaration scope TestXorWithInt:
  context test_var content integer

scope TestXorWithInt:
  definition test_var equals 10 xor 20
```

```catala-test-inline
$ catala Typecheck
[ERROR] Error during typechecking, incompatible types:
--> bool
--> integer

Error coming from typechecking the following expression:
 --> tests/test_bool/bad/test_xor_with_int.catala_en
  | 
8 |   definition test_var equals 10 xor 20
  |                              ^^^^^^^^^
  + 'xor' should be a boolean operator

Type bool coming from expression:
 --> tests/test_bool/bad/test_xor_with_int.catala_en
  | 
8 |   definition test_var equals 10 xor 20
  |                                 ^^^
  + 'xor' should be a boolean operator

Type integer coming from expression:
 --> tests/test_bool/bad/test_xor_with_int.catala_en
  | 
8 |   definition test_var equals 10 xor 20
  |                              ^^
  + 'xor' should be a boolean operator
```
